navigation and change view

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,17 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.xdty.media</groupId>
+            <artifactId>mediaplayer</artifactId>
+            <version>0.0.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>11.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
